Update 'vsiup879c-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:11f0e01a4286a2612bd43f3d50b14d200afc0618@sha256:810fc1d16f30944a9ee8a65ac9507442116f265009636865d094f9b8ae33e9d9

--- a/components/vsiup879c-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/vsiup879c-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vsiup879c-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:11f0e01a4286a2612bd43f3d50b14d200afc0618@sha256:810fc1d16f30944a9ee8a65ac9507442116f265009636865d094f9b8ae33e9d9
+          name: container-image
